--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I'm a paralegal</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I currently live in Orem, Utah</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
-      <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Gardening and playing the viola</p>
+      <h1>What's your dream job</h1>
+      <p>To be able to have a remote job that would let me travel with my dogs in a RV or converted bus :)</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I'd like live on a califoria beach for a while</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Learn a new skill and find a good job</p>
     </section>
 
     <footer id="footer">
